crates/alien-cloudformation/tests/generator/snapshots/generator__generator__aws_sandbox_tests__remote_sandbox_grant_live_aws.snap
---
source: crates/alien-cloudformation/tests/generator/aws_sandbox_tests.rs
expression: yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: live remote sandbox. The sandbox image is built after the deployment registers, so a completed stack does not mean the sandbox can accept sessions yet.
Transform:
- AWS::LanguageExtensions
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Registration
      Parameters:
      - Token
      - ManagingRoleArn
      - ManagingAccountId
    - Label:
        default: Operations
      Parameters:
      - UpdatesMode
      - TelemetryMode
      - HeartbeatsMode
    ParameterLabels:
      HeartbeatsMode:
        default: Heartbeats
      ManagingAccountId:
        default: Image account ID
      ManagingRoleArn:
        default: Management role ARN
      TelemetryMode:
        default: Telemetry
      Token:
        default: Install token
      UpdatesMode:
        default: Updates
Parameters:
  Token:
    Type: String
    Description: Install token from the application setup page.
    NoEcho: true
  ManagingRoleArn:
    Type: String
    Description: ARN of the management identity allowed to assume setup-created roles.
    Default: ''
  ManagingAccountId:
    Type: String
    Description: AWS account ID for the management account that hosts application container images.
    Default: ''
  NetworkMode:
    Type: String
    Description: Choose create-new for a managed VPC, use-existing for your VPC, or use-default for the account default VPC.
    Default: create-new
    AllowedValues:
    - create-new
    - use-existing
    - use-default
  EndpointAccess:
    Type: String
    Description: Who can reach this deployment's endpoints. Private access requires AWS managed containers and cannot change after setup.
    Default: internet
    AllowedValues:
    - internet
    - private
  UpdatesMode:
    Type: String
    Description: How updates are applied after setup registration.
    Default: auto
    AllowedValues:
    - auto
    - approval-required
  TelemetryMode:
    Type: String
    Description: Telemetry collection behavior.
    Default: auto
    AllowedValues:
    - auto
  HeartbeatsMode:
    Type: String
    Description: Heartbeat health-check behavior.
    Default: "on"
    AllowedValues:
    - "off"
    - "on"
Resources:
  AgentsBuildRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName:
        Fn::Sub: ${AWS::StackName}-agents-build
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal:
            Service: lambda.amazonaws.com
          Action: sts:AssumeRole
          Condition:
            StringEquals:
              aws:SourceAccount:
                Ref: AWS::AccountId
      Policies:
      - PolicyName: sandbox-image-build
        PolicyDocument:
          Version: 2012-10-17
          Statement:
          - Sid: ReadSandboxBundlePrefix
            Effect: Allow
            Action:
            - s3:GetObject
            Resource:
              Fn::Sub: arn:${AWS::Partition}:s3:::acme-artifacts/sandbox-bundle/*
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: agents
      - Key: resource-type
        Value: sandbox
  AgentsRemoteExecutePolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName:
        Fn::Sub: ${AWS::StackName}-agents-sandbox-access
      Roles:
      - Ref: AccessRole
      PolicyDocument:
        Statement:
        - Action:
          - lambda:ResumeMicrovm
          - lambda:RunMicrovm
          - lambda:SuspendMicrovm
          - lambda:TerminateMicrovm
          Effect: Allow
          Resource:
          - Fn::Sub: arn:${AWS::Partition}:lambda:${AWS::Region}:${AWS::AccountId}:microvm-image:${AWS::StackName}-agents
          Sid: SandboxLifecycle
        - Action:
          - lambda:PassNetworkConnector
          Effect: Allow
          Resource:
          - Fn::Sub: arn:${AWS::Partition}:lambda:${AWS::Region}:aws:network-connector:aws-network-connector:*
          Sid: PassTheManagedConnectorsASandboxStartsOn
        - Action:
          - lambda:CreateMicrovmAuthToken
          - lambda:GetMicrovm
          Effect: Allow
          Resource:
          - Fn::Sub: arn:${AWS::Partition}:lambda:${AWS::Region}:${AWS::AccountId}:microvm-image:${AWS::StackName}-agents
          Sid: ReachInsideASandbox
        Version: 2012-10-17
  AccessRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName:
        Fn::Sub: ${AWS::StackName}-access
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Sid: AllowManagingRole
          Effect: Allow
          Principal:
            AWS:
              Ref: ManagingRoleArn
          Action: sts:AssumeRole
          Condition:
            StringEquals:
              aws:PrincipalArn:
                Ref: ManagingRoleArn
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: access
      - Key: resource-type
        Value: resource-access
  DeploymentRegistration:
    Type: AWS::CloudFormation::CustomResource
    Properties:
      ServiceToken: arn:aws:lambda:us-east-1:123456789012:function:register
      Token:
        Ref: Token
      DeploymentName:
        Ref: AWS::StackName
      ResourcePrefix:
        Ref: AWS::StackName
      SourceKind: cloudformation
      Platform: aws
      Region:
        Ref: AWS::Region
      SetupTarget: aws
      SetupImportFormatVersion: 1
      SetupFingerprint: test
      SetupFingerprintVersion: 1
      ManagementConfig:
        platform: aws
        managingRoleArn:
          Ref: ManagingRoleArn
      StackSettings:
        deploymentModel: push
        endpointAccess:
          Ref: EndpointAccess
        updates:
          Ref: UpdatesMode
        telemetry:
          Ref: TelemetryMode
        heartbeats:
          Ref: HeartbeatsMode
        network:
          Ref: AWS::NoValue
      Resources:
      - id: agents
        type: sandbox
        importData:
          previewPorts: []
          egressConnectorArns: []
          allowEgress: true
          buildRoleArn:
            Fn::GetAtt:
            - AgentsBuildRole
            - Arn
          bundleUri: s3://acme-artifacts/sandbox-bundle/f00dcafe/bundle.zip
      - id: access
        type: resource-access
        importData:
          roleName:
            Ref: AccessRole
          roleArn:
            Fn::GetAtt:
            - AccessRole
            - Arn
    DependsOn:
    - AgentsBuildRole
    - AgentsRemoteExecutePolicy
    - AccessRole
