crates/alien-cloudformation/tests/generator/snapshots/generator__generator__aws_sandbox_tests__sandbox_restricted_eks.snap
---
source: crates/alien-cloudformation/tests/generator/aws_sandbox_tests.rs
expression: yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: sandbox_restricted_eks
Transform:
- AWS::LanguageExtensions
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Registration
      Parameters:
      - Token
      - ManagingRoleArn
      - ManagingAccountId
    - Label:
        default: Network
      Parameters:
      - NetworkMode
      - VpcCidr
      - AvailabilityZones
      - VpcId
      - PublicSubnetIds
      - PrivateSubnetIds
      - SecurityGroupIds
    - Label:
        default: Custom domain
      Parameters:
      - DomainName
      - HostedZoneId
      - CertificateArn
    - Label:
        default: Operations
      Parameters:
      - UpdatesMode
      - TelemetryMode
      - HeartbeatsMode
    ParameterLabels:
      AvailabilityZones:
        default: Availability zones
      CertificateArn:
        default: Certificate ARN
      DomainName:
        default: Domain name
      HeartbeatsMode:
        default: Heartbeats
      HostedZoneId:
        default: Hosted zone ID
      ManagingAccountId:
        default: Image account ID
      ManagingRoleArn:
        default: Management role ARN
      NetworkMode:
        default: Network
      PrivateSubnetIds:
        default: Private subnet IDs
      PublicSubnetIds:
        default: Public subnet IDs
      SecurityGroupIds:
        default: Security group IDs
      TelemetryMode:
        default: Telemetry
      Token:
        default: Install token
      UpdatesMode:
        default: Updates
      VpcCidr:
        default: VPC CIDR
      VpcId:
        default: VPC ID
Parameters:
  Token:
    Type: String
    Description: Install token from the application setup page.
    NoEcho: true
  ManagingRoleArn:
    Type: String
    Description: ARN of the management identity allowed to assume setup-created roles.
    Default: ''
  ManagingAccountId:
    Type: String
    Description: AWS account ID for the management account that hosts application container images.
    Default: ''
  NetworkMode:
    Type: String
    Description: Choose create-new for a managed VPC, or use-existing for your VPC. This application's private resources require explicit subnet IDs, which setup cannot discover from the account default VPC.
    Default: create-new
    AllowedValues:
    - create-new
    - use-existing
  VpcCidr:
    Type: String
    Description: Only used with create-new. CIDR for the new VPC; leave unset for the generated default.
    Default: ''
  AvailabilityZones:
    Type: Number
    Description: Only used with create-new. Number of availability zones for the new VPC.
    Default: 2
    AllowedValues:
    - 2
    - 3
  VpcId:
    Type: String
    Description: Only used with use-existing. Existing VPC ID.
    Default: ''
  PublicSubnetIds:
    Type: CommaDelimitedList
    Description: Only used with use-existing. Existing public subnet IDs.
    Default: ''
  PrivateSubnetIds:
    Type: CommaDelimitedList
    Description: Only used with use-existing. Existing private subnet IDs.
    Default: ''
  SecurityGroupIds:
    Type: CommaDelimitedList
    Description: Only used with use-existing. Existing security group IDs.
    Default: ''
  DomainName:
    Type: String
    Description: Optional custom domain. Leave unset to use the deployment-managed endpoint.
    Default: ''
  HostedZoneId:
    Type: String
    Description: Route 53 hosted zone ID for the custom domain. Not needed for the auto-generated domain.
    Default: ''
  CertificateArn:
    Type: String
    Description: ACM certificate ARN for the custom domain. Required when DomainName is set.
    Default: ''
    AllowedPattern: ^$|^arn:aws(-[a-z]+)?:acm:[a-z0-9-]+:[0-9]{12}:certificate/.+$
  UpdatesMode:
    Type: String
    Description: How updates are applied after setup registration.
    Default: auto
    AllowedValues:
    - auto
    - approval-required
  TelemetryMode:
    Type: String
    Description: Telemetry collection behavior.
    Default: auto
    AllowedValues:
    - auto
  HeartbeatsMode:
    Type: String
    Description: Heartbeat health-check behavior.
    Default: "on"
    AllowedValues:
    - "off"
    - "on"
Conditions:
  NetworkModeCreate:
    Fn::Equals:
    - Ref: NetworkMode
    - create-new
  NetworkUseAz2:
    Fn::Not:
    - Fn::Equals:
      - Ref: AvailabilityZones
      - 1
  NetworkUseAz3:
    Fn::Equals:
    - Ref: AvailabilityZones
    - 3
  NetworkCreateUseAz2:
    Fn::And:
    - Fn::Equals:
      - Ref: NetworkMode
      - create-new
    - Condition: NetworkUseAz2
  NetworkCreateUseAz3:
    Fn::And:
    - Fn::Equals:
      - Ref: NetworkMode
      - create-new
    - Condition: NetworkUseAz3
  HasVpcCidr:
    Fn::Not:
    - Fn::Equals:
      - Ref: VpcCidr
      - ''
  HasDomainName:
    Fn::Not:
    - Fn::Equals:
      - Ref: DomainName
      - ''
Rules:
  CustomDomainCertificate:
    Assertions:
    - Assert:
        Fn::Or:
        - Fn::Equals:
          - Ref: DomainName
          - ''
        - Fn::Not:
          - Fn::Equals:
            - Ref: CertificateArn
            - ''
      AssertDescription: CertificateArn must be set to an AWS ACM certificate ARN when DomainName is set.
Resources:
  DefaultNetworkVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Fn::If:
        - HasVpcCidr
        - Ref: VpcCidr
        - 10.42.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkVpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      InternetGatewayId:
        Ref: DefaultNetworkInternetGateway
    Condition: NetworkModeCreate
  DefaultNetworkPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Fn::Select:
        - 0
        - Fn::Cidr:
          - Fn::GetAtt:
            - DefaultNetworkVpc
            - CidrBlock
          - 6
          - 8
      MapPublicIpOnLaunch: true
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Fn::Select:
        - 3
        - Fn::Cidr:
          - Fn::GetAtt:
            - DefaultNetworkVpc
            - CidrBlock
          - 6
          - 8
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Fn::Select:
        - 1
        - Fn::Cidr:
          - Fn::GetAtt:
            - DefaultNetworkVpc
            - CidrBlock
          - 6
          - 8
      MapPublicIpOnLaunch: true
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkCreateUseAz2
  DefaultNetworkPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Fn::Select:
        - 4
        - Fn::Cidr:
          - Fn::GetAtt:
            - DefaultNetworkVpc
            - CidrBlock
          - 6
          - 8
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkCreateUseAz2
  DefaultNetworkPublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      AvailabilityZone:
        Fn::Select:
        - 2
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Fn::Select:
        - 2
        - Fn::Cidr:
          - Fn::GetAtt:
            - DefaultNetworkVpc
            - CidrBlock
          - 6
          - 8
      MapPublicIpOnLaunch: true
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkCreateUseAz3
  DefaultNetworkPrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      AvailabilityZone:
        Fn::Select:
        - 2
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Fn::Select:
        - 5
        - Fn::Cidr:
          - Fn::GetAtt:
            - DefaultNetworkVpc
            - CidrBlock
          - 6
          - 8
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkCreateUseAz3
  DefaultNetworkPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkPublicDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: DefaultNetworkPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: DefaultNetworkInternetGateway
    DependsOn:
    - DefaultNetworkVpcGatewayAttachment
    Condition: NetworkModeCreate
  DefaultNetworkPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkNatEip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    Condition: NetworkModeCreate
  DefaultNetworkNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - DefaultNetworkNatEip
        - AllocationId
      SubnetId:
        Ref: DefaultNetworkPublicSubnet1
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkPrivateDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: DefaultNetworkPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: DefaultNetworkNatGateway
    DependsOn:
    - DefaultNetworkNatGateway
    Condition: NetworkModeCreate
  DefaultNetworkPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DefaultNetworkPublicSubnet1
      RouteTableId:
        Ref: DefaultNetworkPublicRouteTable
    Condition: NetworkModeCreate
  DefaultNetworkPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DefaultNetworkPrivateSubnet1
      RouteTableId:
        Ref: DefaultNetworkPrivateRouteTable
    Condition: NetworkModeCreate
  DefaultNetworkPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DefaultNetworkPublicSubnet2
      RouteTableId:
        Ref: DefaultNetworkPublicRouteTable
    Condition: NetworkCreateUseAz2
  DefaultNetworkPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DefaultNetworkPrivateSubnet2
      RouteTableId:
        Ref: DefaultNetworkPrivateRouteTable
    Condition: NetworkCreateUseAz2
  DefaultNetworkPublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DefaultNetworkPublicSubnet3
      RouteTableId:
        Ref: DefaultNetworkPublicRouteTable
    Condition: NetworkCreateUseAz3
  DefaultNetworkPrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DefaultNetworkPrivateSubnet3
      RouteTableId:
        Ref: DefaultNetworkPrivateRouteTable
    Condition: NetworkCreateUseAz3
  DefaultNetworkSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Private workload security group
      VpcId:
        Ref: DefaultNetworkVpc
      SecurityGroupEgress:
      - IpProtocol: '-1'
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DeploymentRegistration:
    Type: AWS::CloudFormation::CustomResource
    Properties:
      ServiceToken: arn:aws:lambda:us-east-1:123456789012:function:register
      Token:
        Ref: Token
      DeploymentName:
        Ref: AWS::StackName
      ResourcePrefix:
        Ref: AWS::StackName
      SourceKind: cloudformation
      Platform: kubernetes
      Region:
        Ref: AWS::Region
      SetupTarget: eks
      SetupImportFormatVersion: 1
      SetupFingerprint: test
      SetupFingerprintVersion: 1
      ManagementConfig: null
      StackSettings:
        deploymentModel: push
        updates:
          Ref: UpdatesMode
        telemetry:
          Ref: TelemetryMode
        heartbeats:
          Ref: HeartbeatsMode
        network:
          Fn::If:
          - NetworkModeCreate
          - type: create
            cidr:
              Fn::If:
              - HasVpcCidr
              - Ref: VpcCidr
              - Ref: AWS::NoValue
            availability_zones:
              Ref: AvailabilityZones
          - type: byo-vpc-aws
            vpc_id:
              Ref: VpcId
            public_subnet_ids:
              Ref: PublicSubnetIds
            private_subnet_ids:
              Ref: PrivateSubnetIds
            security_group_ids:
              Ref: SecurityGroupIds
        domains:
          Fn::If:
          - HasDomainName
          - customDomains:
              default:
                domain:
                  Ref: DomainName
                certificate:
                  aws:
                    certificateArn:
                      Ref: CertificateArn
          - Ref: AWS::NoValue
        kubernetes:
          cluster:
            ownership: managed
            namespace: default
          exposure:
            Fn::If:
            - HasDomainName
            - mode: custom
              domain:
                Ref: DomainName
              route:
                routeApi: ingress
                controller: eks.amazonaws.com/alb
                ingressClassName: alb
                labels: {}
                annotations: {}
                provider:
                  provider: awsAlb
                  scheme: internet-facing
                  targetType: ip
                  subnetIds: []
              certificate:
                mode: awsAcmArn
                certificateArn:
                  Ref: CertificateArn
            - mode: generated
              route:
                routeApi: ingress
                controller: eks.amazonaws.com/alb
                ingressClassName: alb
                labels: {}
                annotations: {}
                provider:
                  provider: awsAlb
                  scheme: internet-facing
                  targetType: ip
                  subnetIds: []
              certificate:
                mode: none
      Resources:
      - id: default-network
        type: network
        importData:
          Fn::If:
          - NetworkModeCreate
          - vpcId:
              Ref: DefaultNetworkVpc
            cidrBlock:
              Fn::GetAtt:
              - DefaultNetworkVpc
              - CidrBlock
            internetGatewayId:
              Ref: DefaultNetworkInternetGateway
            natGatewayId:
              Ref: DefaultNetworkNatGateway
            eipAllocationId:
              Fn::GetAtt:
              - DefaultNetworkNatEip
              - AllocationId
            publicSubnetIds:
            - Ref: DefaultNetworkPublicSubnet1
            - Fn::If:
              - NetworkCreateUseAz2
              - Ref: DefaultNetworkPublicSubnet2
              - Ref: AWS::NoValue
            - Fn::If:
              - NetworkCreateUseAz3
              - Ref: DefaultNetworkPublicSubnet3
              - Ref: AWS::NoValue
            privateSubnetIds:
            - Ref: DefaultNetworkPrivateSubnet1
            - Fn::If:
              - NetworkCreateUseAz2
              - Ref: DefaultNetworkPrivateSubnet2
              - Ref: AWS::NoValue
            - Fn::If:
              - NetworkCreateUseAz3
              - Ref: DefaultNetworkPrivateSubnet3
              - Ref: AWS::NoValue
            publicRouteTableId:
              Ref: DefaultNetworkPublicRouteTable
            privateRouteTableId:
              Ref: DefaultNetworkPrivateRouteTable
            securityGroupId:
              Fn::GetAtt:
              - DefaultNetworkSecurityGroup
              - GroupId
            availabilityZones:
            - Fn::Select:
              - 0
              - Fn::GetAZs:
                  Ref: AWS::Region
            - Fn::If:
              - NetworkUseAz2
              - Fn::Select:
                - 1
                - Fn::GetAZs:
                    Ref: AWS::Region
              - Ref: AWS::NoValue
            - Fn::If:
              - NetworkUseAz3
              - Fn::Select:
                - 2
                - Fn::GetAZs:
                    Ref: AWS::Region
              - Ref: AWS::NoValue
            isByoVpc: false
          - vpcId:
              Ref: VpcId
            publicSubnetIds:
              Ref: PublicSubnetIds
            privateSubnetIds:
              Ref: PrivateSubnetIds
            securityGroupId:
              Fn::Select:
              - 0
              - Ref: SecurityGroupIds
            availabilityZones: []
            isByoVpc: true
      BasePlatform: aws
